2002-12-10  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Applied Mikhaels quote fix.

2002-12-05  Marcus Lundblad <ml@update.uu.se>
	* fvwm/conditional.c (CreateConditionMask):
	Implemented conditional "FixedSize" and "HasHandles"
	* fvwm/fvwm.1.in
	Documented conditional options "FixedSize" and "HasHandles".
	
2002-12-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed StickyAcrossDesks w/ StartsOnPage

	* fvwm/functable.c:
	* fvwm/commands.h:
	* fvwm/ewmh_conf.c (set_state_workaround):
	* fvwm/update.c (apply_window_updates):
	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/ewmh_events.c (ewmh_WMDesktop):
	(ewmh_WMStateSticky):
	* fvwm/conditional.c (CreateConditionMask):
	* fvwm/gnome.c (GNOME_SetHints):
	(GNOME_GetStyle):
	(GNOME_HandlePropRequest):
	* fvwm/placement.c (SmartPlacement):
	(get_next_x):
	(get_next_y):
	(test_fit):
	(PlaceWindow):
	* fvwm/session.c (SaveWindowStates):
	(MatchWinToSM):
	(MatchWinToSM):
	* fvwm/ewmh.c (check_desk):
	(EWMH_SetWMDesktop):
	(ewmh_ComputeAndSetWorkArea):
	(ewmh_HandleDynamicWorkArea):
	(ewmh_HandleDesktop):
	(ewmh_HandleDock):
	(ewmh_HandleMenu):
	(ewmh_HandleToolBar):
	* fvwm/virtual.c (UnmapDesk):
	(MapDesk):
	(MoveViewport):
	(do_move_window_to_desk):
	* fvwm/icons.c (setup_icon_title_size):
	(DrawIconTitleWindow):
	(AutoPlaceIcon):
	(Iconify):
	* fvwm/borders.c (is_button_toggled):
	(get_common_decorations):
	(border_draw_title_stick_lines):
	* fvwm/add_window.c (AddWindow):
	* fvwm/move_resize.c (__move_window):
	(__move_window):
	(is_window_sticky_across_pages):
	(is_window_sticky_across_desks):
	(MaximizeHeight):
	(MaximizeWidth):
	(stick_page):
	(stick_desk):
	(CMD_Stick):
	(CMD_StickAcrossPages):
	(CMD_StickAcrossDesks):
	(stick_across_pages):
	(stick_across_desks):
	(handle_stick_across_desks):
	(handle_stick_across_pages):
	(handle_stick):
	* fvwm/fvwm.h (struct):
	* fvwm/style.c (style_parse_one_style_option):
	(check_window_style_change):
	* fvwm/style.h: