@@ -120,6 +120,7 @@ enum
 	F_RESTART,
 	F_SAVE_SESSION,
 	F_SAVE_QUIT_SESSION,
+	F_SCANWINDOW,
 	F_SCHEDULE,
 	F_SCROLL,
 	F_SETDESK,
@@ -345,6 +346,7 @@ void CMD_RestackTransients(F_CMD_ARGS);
 void CMD_Restart(F_CMD_ARGS);
 void CMD_SaveQuitSession(F_CMD_ARGS);
 void CMD_SaveSession(F_CMD_ARGS);
+void CMD_ScanWindow(F_CMD_ARGS);
 void CMD_Schedule(F_CMD_ARGS);
 void CMD_Scroll(F_CMD_ARGS);
 void CMD_Send_ConfigInfo(F_CMD_ARGS);
