@@ -9436,6 +9436,45 @@ attribute for iconified windows and "CirculateHitShaded" which
 does the same for shaded windows.
 
 .TP
+.BI "ScanWindow [" FromPointer "] " direction direction2 " [(" conditions ")] "
+command
+Performs
+.I command
+(typically
+.BR Focus )
+on a window in the given direction which satisfies all
+.IR conditions .
+Conditions are the same as for
+.BR Current .
+Normally, the center of the currently focused window or the
+context window in which the command was invoked is taken as the
+starting point.  Lacking such a window, or when the
+.I FromPointer
+option is given, the current position of the pointer is taken as
+the starting point.  The
+.I direction
+may be one of "North", "Northeast", "East", "Southeast", "South",
+"Southwest", "West", and "Northwest".  Which window
+.B ScanWindow
+selects depends first on the position along the primary axis given by
+.IR direction .
+If any windows have the exact same coordinate along the primary
+axis, the secondary direction is used to order the windows.  The
+.I direction2
+may be one of the same set of values as
+.IR direction .
+If
+.I direction2
+is not perfectly perpendicular to
+.IR direction ,
+ScanWindow will return a failure.
+When using ScanWindow repeatedly with the same arguments,
+it is guaranteed that all windows matching the conditions will eventually
+be found.  If the focus reaches a limit along the primary axis,
+it will wrap around to the opposite side.
+Returns -1 if an invalid direction was given.
+
+.TP
 .BI "ThisWindow [(" conditions ")] " command
 .B ThisWindow
 executes the specified
