@@ -1,3 +1,11 @@
+2002-12-11  Jason Weber  <baboon@imonk.com>
+
+	* FvwmProxy/FvwmProxy.c:
+	* FvwmProxy/FvwmProxy.1:
+	Add tracking of currently focused window.
+	Allow desk auto-switching if you don't use CurrentPage conditional.
+	Update man page to suggest ScanWindow.
+
 2002-12-08  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmWinList/List.c (IsItemVisible):
